--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: Edition Template
+title: huyi's physics paper reading
 url: "https://long-pig.cloudvent.net"
 baseurl:
 google_analytics_key:
